<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".JokesFragment">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/jcd1"
                android:layout_width="match_parent"
                android:layout_height="@dimen/card_height"
                android:layout_margin="2dp"
                android:background="@drawable/rowbg"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/default_gap"
                    android:src="@drawable/winking" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/jcd1"
                    android:textColor="@color/colorPrimary"
                    android:textSize="20sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/jcd2"
                android:layout_width="match_parent"
                android:layout_height="@dimen/card_height"
                android:layout_margin="2dp"
                android:background="@drawable/rowbg"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/default_gap"
                    android:src="@drawable/clownface" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/jcd2"
                    android:textColor="@color/colorPrimary"
                    android:textSize="20sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/jcd3"
                android:layout_width="match_parent"
                android:layout_height="@dimen/card_height"
                android:layout_margin="2dp"
                android:background="@drawable/rowbg"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/default_gap"
                    android:src="@drawable/santa" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/jcd3"
                    android:textColor="@color/colorPrimary"
                    android:textSize="20sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/jcd4"
                android:layout_width="match_parent"
                android:layout_height="@dimen/card_height"
                android:layout_margin="2dp"
                android:background="@drawable/rowbg"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/default_gap"
                    android:src="@drawable/girl" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/jcd4"
                    android:textColor="@color/colorPrimary"
                    android:textSize="20sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/jcd5"
                android:layout_width="match_parent"
                android:layout_height="@dimen/card_height"
                android:layout_margin="2dp"
                android:background="@drawable/rowbg"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="3dp"
                    android:layout_marginLeft="@dimen/default_gap"
                    android:src="@drawable/teacher" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:paddingRight="@dimen/default_gap"
                    android:text="@string/jcd5"
                    android:textColor="@color/colorPrimary"
                    android:textSize="20sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/jcd6"
                android:layout_width="match_parent"
                android:layout_height="@dimen/card_height"
                android:layout_margin="2dp"
                android:background="@drawable/rowbg"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="3dp"
                    android:layout_marginLeft="@dimen/default_gap"
                    android:src="@drawable/fun" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/jcd6"
                    android:textColor="@color/colorPrimary"
                    android:textSize="20sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/jcd7"
                android:layout_width="match_parent"
                android:layout_height="@dimen/card_height"
                android:layout_margin="2dp"
                android:background="@drawable/rowbg"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="3dp"
                    android:layout_marginLeft="@dimen/default_gap"
                    android:src="@drawable/fun" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/jcd7"
                    android:textColor="@color/colorPrimary"
                    android:textSize="20sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/jcd8"
                android:layout_width="match_parent"
                android:layout_height="@dimen/card_height"
                android:layout_margin="2dp"
                android:background="@drawable/rowbg"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="3dp"
                    android:layout_marginLeft="@dimen/default_gap"
                    android:src="@drawable/fun" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/jcd8"
                    android:textColor="@color/colorPrimary"
                    android:textSize="20sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/jcd9"
                android:layout_width="match_parent"
                android:layout_height="@dimen/card_height"
                android:layout_margin="2dp"
                android:background="@drawable/rowbg"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="3dp"
                    android:layout_marginLeft="@dimen/default_gap"
                    android:src="@drawable/fun" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/jcd9"
                    android:textColor="@color/colorPrimary"
                    android:textSize="20sp" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>